Source/WebCore: Reset the canvas backing store pixel ratio when the buffer resizes.

The backing store was not being recreated using the current page pixel ratio
when a resize occurred.

https://bugs.webkit.org/show_bug.cgi?id=100608

Reviewed by Darin Adler.

Test: fast/canvas/canvas-resize-reset-pixelRatio.html

* html/HTMLCanvasElement.cpp:
(WebCore::HTMLCanvasElement::HTMLCanvasElement): Use targetDeviceScaleFactor.
(WebCore::HTMLCanvasElement::reset): Do a clear only if the pixel ratios also
match. Store the new pixel ratio in m_deviceScaleFactor.
(WebCore::HTMLCanvasElement::targetDeviceScaleFactor): Added.
* html/HTMLCanvasElement.h:
(WebCore::HTMLCanvasElement::setSize): Return early only if the sizes and
pixel ratios match.

LayoutTests: Test the canvas backing store pixel ratio when the buffer resizes.

https://bugs.webkit.org/show_bug.cgi?id=100608

Reviewed by Darin Adler.

* fast/canvas/canvas-resize-reset-pixelRatio-expected.txt: Added.
* fast/canvas/canvas-resize-reset-pixelRatio.html: Added.

Canonical link: https://commits.webkit.org/119881@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134099 268f45cc-cd09-0410-ab3c-d52691b4dbfc